Reetan.Nayak Dev 25/force-app/main/default/objects/State_List__c/State_List__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>map of country-state iso code  and corresponding state iso code and state name</description>
    <label>State List</label>
</CustomObject>