Reetan.Nayak Dev 25/force-app/main/default/objects/State_List__c/fields/Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_Code__c</fullName>
    <description>unique 3 character country code</description>
    <label>Country ISO Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>