Reetan.Nayak Dev 25/force-app/main/default/objects/State_List__c/fields/State_Province_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Abbreviation__c</fullName>
    <label>State/Province Abbreviation</label>
    <length>8</length>
    <type>Text</type>
</CustomField>