Reetan.Nayak Dev 25/force-app/main/default/objects/State_List__c/fields/State_Province_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Name__c</fullName>
    <label>State/Province Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>