Reetan.Nayak Dev 25/force-app/main/default/objects/State_List__c/listViews/All_CS.listView-meta.xml
<ListView>
    <fullName>All_CS</fullName>
    <columns>NAME</columns>
    <columns>State_Province_Name__c</columns>
    <columns>Region__c</columns>
    <columns>State_Province_Abbreviation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All CS</label>
</ListView>